<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditDebtorActivity">

    <EditText
        android:id="@+id/edit_text_debtor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/nazwa_osoby"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text_debt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/dlug"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_debtor_name"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/imageButton_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#3F51B5"
        android:contentDescription="@string/exit_button_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_share"
        app:srcCompat="@drawable/ic_close" />

    <ImageButton
        android:id="@+id/imageButton_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#3F51B5"
        android:contentDescription="@string/share_button_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton_close"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_simulate"
        app:srcCompat="@drawable/ic_share" />

    <ImageButton
        android:id="@+id/imageButton_simulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#3F51B5"
        android:contentDescription="@string/simulate_button_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton_share"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_save"
        app:srcCompat="@drawable/ic_simulate" />

    <ImageButton
        android:id="@+id/imageButton_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#3F51B5"
        android:contentDescription="@string/save_button_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton_simulate"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />


</androidx.constraintlayout.widget.ConstraintLayout>